crates/abp-core/tests/snapshots/snapshots_test__capability_manifest.snap
---
source: crates/abp-core/tests/snapshots_test.rs
expression: value
---
{
  "mcp_client": {
    "restricted": {
      "reason": "policy"
    }
  },
  "streaming": "native",
  "tool_bash": "unsupported",
  "tool_read": "native",
  "tool_write": "emulated"
}
