crates/abp-core/tests/snapshots/snapshots_test__event_assistant_delta.snap
---
source: crates/abp-core/tests/snapshots_test.rs
expression: event
---
{
  "ts": "2024-01-01T00:00:00Z",
  "type": "assistant_delta",
  "text": "chunk"
}
