crates/abp-core/tests/snapshots/snapshots_test__event_run_completed.snap
---
source: crates/abp-core/tests/snapshots_test.rs
expression: event
---
{
  "ts": "2024-01-01T00:00:00Z",
  "type": "run_completed",
  "message": "done"
}
