crates/abp-core/tests/snapshots/snapshots_test__event_tool_result.snap
---
source: crates/abp-core/tests/snapshots_test.rs
expression: event
---
{
  "ts": "2024-01-01T00:00:00Z",
  "type": "tool_result",
  "tool_name": "read",
  "tool_use_id": "tu_1",
  "output": "file contents",
  "is_error": false
}
